localize "options saved" message

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -31,5 +31,8 @@
     },
     "save": {
         "message": "Guardar"
+    },
+    "optionsSaved": {
+        "message": "Se guardió las opciones."
     }
 }
