--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -37,5 +37,11 @@
     },
     "shortcutsLinkText": {
         "message": "Keyboard shortcut"
+    },
+    "shortcutsEditText": {
+        "message": "Edit keyboard shortcut"
+    },
+    "shortcutsRestart": {
+        "message": "(may need to restart browser)"
     }
 }
