Add option to clear all JS settings

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -43,5 +43,11 @@
     },
     "shortcutsRestart": {
         "message": "(may need to restart browser)"
+    },
+    "clearSettings": {
+        "message": "Clear all settings set by this extension"
+    },
+    "settingsCleared": {
+        "message": "Cleared all settings."
     }
 }
